Fix left padding alignment in Name and Address fields

--- a/map/src/infoblock/components/favorite/wptEditPanel.module.css
+++ b/map/src/infoblock/components/favorite/wptEditPanel.module.css
@@ -27,7 +27,11 @@
 }
 
 .fieldInput {
-    padding-left: 8px !important;
+    padding-left: 16px !important;
+}
+
+.fieldLabel {
+    left: 4px !important;
 }
 
 .actions {
